Cambios en el html

--- a/src/main/resources/templates/PaginaWeb/PaginaPrincipal.html
+++ b/src/main/resources/templates/PaginaWeb/PaginaPrincipal.html
@@ -23,9 +23,18 @@
     <div class="icon-bubbles"> <a href="/src/main/resources/templates/PaginaWeb/Formulario.html">Contactanos</a></div>
 
     <br>
+
+    <div class="icon-user" class="BotonSesion"> <button id="boton" class="boton">Iniciar Sesion</button>  </div>
+ 
+    <br>
+
    <div class="icon-ModoOscuro"> <button id="boton" class="boton">Modo Oscuro</button>
     <script src="./scripts/script.js"></script>  </div>
   </div>
+
+
+
+ 
 
   </nav>
 </head>
