--- a/src/main/resources/static/css/PaginaWeb/PaginaWeb.css
+++ b/src/main/resources/static/css/PaginaWeb/PaginaWeb.css
@@ -109,7 +109,7 @@ html {
     padding: 1em;
     background-color: #151967;
     width: 20%;
-    height: 50%;
+    height: 45%;
     transform: translateX(1em);
     transition: 0.2s transform;
     color: #E0E724;
@@ -165,7 +165,7 @@ html {
   }
   
 
-  
+  .Menu{font-size: 22px;}
  
   
   
@@ -178,6 +178,7 @@ html {
   border-radius: 15%;
 
   cursor: pointer;
+  font-size: 16px;
   }
   .boton:hover{
     background-color: #E0E724;
@@ -197,8 +198,8 @@ html {
   text-align: center;
   align-items: center;
   align-content: center;
-  margin-top: 20px;
-  margin-left: 12%;
+  margin-top: 10px;
+
 }
 
 
