--- a/src/main/resources/templates/PaginaWeb/Clases.html
+++ b/src/main/resources/templates/PaginaWeb/Clases.html
@@ -16,23 +16,41 @@
       <div class="Hambur">
     <div class="TituloMenu">Club de Padel</div>
     <div class="Iconos"> <div class="icon-facebook"></div><div class="icon-instagram"></div><div class="icon-whatsapp"></div><div class="icon-telegram"></div></div>
-   <div class="icon-users"> <a href="">Clases</a></div>
-    <div class="icon-Copa"> <a href=".">Torneos</a></div>
-    <div class="icon-camara"> <a href="./Pagina2/Index.html">Instalaciones</a></div>
+   <div class="icon-user"> <a href="/src/main/resources/templates/PaginaWeb/PaginaPrincipal.html">Inicio</a></div>
+    <div class="icon-Copa"> <a href="/src/main/resources/templates/PaginaWeb/Torneos.html">Torneos</a></div>
+    <div class="icon-camara"> <a href="/src/main/resources/templates/PaginaWeb/Instalaciones.html">Instalaciones</a></div>
 
  
-    <div class="icon-bubbles"> <a href="">Contactanos</a></div>
+    <div class="icon-bubbles"> <a href="/src/main/resources/templates/PaginaWeb/Formulario.html">Contactanos</a></div>
 
     <br>
+
+    <div class="icon-user BotonSesion"> <button id="boton" class="boton">Iniciar Sesion</button>  </div>
+ 
+    <br>
+
    <div class="icon-ModoOscuro"> <button id="boton" class="boton">Modo Oscuro</button>
     <script src="./scripts/script.js"></script>  </div>
   </div>
+
+
+
+ 
 
   </nav>
 </head>
 <body>
   <header>
  <h1>Clases</h1>
+
+
+
+ <h1>Escuela</h1>
+ <h2>Tipos de clases</h2>
+ <h1>Campus</h1>
+ <h2>¿Tarifas?</h2>
+ <h1>Profesores</h1>
+ <h1>Preparadores Fisicos</h1>
   </header>
   <main>
 
