--- a/src/main/resources/templates/PaginaWeb/Torneos.html
+++ b/src/main/resources/templates/PaginaWeb/Torneos.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/src/main/resources/static/css/PaginaWeb/Torneos.css">
-  <link rel="stylesheet" href="/src/main/resources/static/css/PaginaWeb/normalize.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@200&family=Whisper&display=swap" rel="stylesheet">
@@ -29,9 +28,7 @@
  
     <br>
 
-   <div class="icon-ModoOscuro"> <button id="boton" class="boton">Modo Oscuro</button>
-    <script src="./scripts/script.js"></script>  </div>
-  </div>
+
 
 
 
@@ -42,17 +39,36 @@
 <body>
   <header>
  <h1>Torneos</h1>
- <h1>Estandar</h1>
-
-
- <h1>Especiales</h1>
   </header>
   <main>
+    <div class="Estandar">
+    <h1>Estandar</h1>
+   <div class="Imagenes"> 
+    <img src="/src/main/resources/static/img/Verano.jpg" alt="Clase Verano">
+    <img src="/src/main/resources/static/img/INVIERNO.jpg" alt="Clase INVIERNO">
+    <img src="/src/main/resources/static/img/Otoño.jpg" alt="Clase Otoño">
+    <img src="/src/main/resources/static/img/Primavera.jpg" alt="Clase Primavera">
+   </div>
+  </div>
+   <div class="Especiales">
+   <h1>Especiales</h1>
+   <div class="Imagenes"> 
+    <img src="/src/main/resources/static/img/Halloween.jpg" alt="Clase Halloween">
+    <img src="/src/main/resources/static/img/Carnaval.webp" alt="Clase Carnaval">
+    <img src="/src/main/resources/static/img/Navidad.jpg" alt="Clase Navidad">
+    <img src="/src/main/resources/static/img/Aniversario.jpg" alt="Clase Aniversario">
 
+   </div>
+  </div>
   </main>
-</section>
-  <footer>
 
+  <footer>
+    <div class="footer-content">
+      <p>Copyright © 2024 | <a href="#">Aviso legal</a> | <a href="#">Política de privacidad y cookies</a></p>
+      <p>CONTACTO</p>
+      <p>999 999 999 | <a href="mailto:info@padelcidon.com">info@padelcidon.com</a></p>
+      
+    </div>
   </footer>
 </body>
 </html>
