--- a/src/main/resources/static/css/PaginaWeb/Formulario.css
+++ b/src/main/resources/static/css/PaginaWeb/Formulario.css
@@ -74,10 +74,86 @@
     content: "\ea96";
   }
 
+  @font-face {
+    font-family: 'icomoon';
+    src: url('fonts/icomoon.eot?z5kivn');
+    src: url('fonts/icomoon.eot?z5kivn#iefix') format('embedded-opentype'),
+      url('fonts/icomoon.ttf?z5kivn') format('truetype'),
+      url('fonts/icomoon.woff?z5kivn') format('woff'),
+      url('fonts/icomoon.svg?z5kivn#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"],
+  [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-camara:before {
+    content: "\e90f";
+  }
+  
+  .icon-location:before {
+    content: "\e948";
+  }
+  
+  .icon-bubbles:before {
+    content: "\e970";
+  }
+  
+  .icon-user:before {
+    content: "\e971";
+  }
+  
+  .icon-users:before {
+    content: "\e972";
+  }
+  
+  .icon-Copa:before {
+    content: "\e99e";
+  }
+  
+  .icon-ModoOscuro:before {
+    content: "\e9d6";
+  }
+  
+  .icon-facebook:before {
+    content: "\ea91";
+  }
+  
+  .icon-instagram:before {
+    content: "\ea92";
+  }
+  
+  .icon-whatsapp:before {
+    content: "\ea93";
+  }
+  
+  .icon-telegram:before {
+    content: "\ea95";
+  }
+  
+  .icon-twitter:before {
+    content: "\ea96";
+  }
+
 
 html {
     background-color: #040740;
-    font-family: 'Kalnia', sans-serif;
+    font-family: 'Kalnia';
     color:#E0E724;
   }
   
@@ -108,13 +184,13 @@ html {
     text-align: center;
     right: 100%;
     padding: 1em;
-    background-color: #141857;
+    background-color: #151967;
     width: 20%;
     height: 45%;
     transform: translateX(1em);
     transition: 0.2s transform;
     color: #E0E724;
-
+    font-weight: bold;
     font-family: 'Kalnia', serif;
   }
   
@@ -144,7 +220,7 @@ html {
   
   .icon-facebook {
     font-size: 20px;
-    margin-left: 16%;
+  margin-left: 12%;
   
   }
   
@@ -187,7 +263,8 @@ html {
 
     }
 
-
+    a{text-decoration: none;
+      color: #E0E724;}
 /* Estilos para el formulario */
 body {
   font-family: 'Kalnia', sans-serif;
