--- a/src/main/resources/static/css/PaginaWeb/Instalaciones.css
+++ b/src/main/resources/static/css/PaginaWeb/Instalaciones.css
@@ -74,6 +74,82 @@
     content: "\ea96";
   }
 
+  @font-face {
+    font-family: 'icomoon';
+    src: url('fonts/icomoon.eot?z5kivn');
+    src: url('fonts/icomoon.eot?z5kivn#iefix') format('embedded-opentype'),
+      url('fonts/icomoon.ttf?z5kivn') format('truetype'),
+      url('fonts/icomoon.woff?z5kivn') format('woff'),
+      url('fonts/icomoon.svg?z5kivn#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"],
+  [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-camara:before {
+    content: "\e90f";
+  }
+  
+  .icon-location:before {
+    content: "\e948";
+  }
+  
+  .icon-bubbles:before {
+    content: "\e970";
+  }
+  
+  .icon-user:before {
+    content: "\e971";
+  }
+  
+  .icon-users:before {
+    content: "\e972";
+  }
+  
+  .icon-Copa:before {
+    content: "\e99e";
+  }
+  
+  .icon-ModoOscuro:before {
+    content: "\e9d6";
+  }
+  
+  .icon-facebook:before {
+    content: "\ea91";
+  }
+  
+  .icon-instagram:before {
+    content: "\ea92";
+  }
+  
+  .icon-whatsapp:before {
+    content: "\ea93";
+  }
+  
+  .icon-telegram:before {
+    content: "\ea95";
+  }
+  
+  .icon-twitter:before {
+    content: "\ea96";
+  }
+
 
 html {
     background-color: #040740;
@@ -114,7 +190,7 @@ html {
     transform: translateX(1em);
     transition: 0.2s transform;
     color: #E0E724;
-
+    font-weight: bold;
     font-family: 'Kalnia', serif;
   }
   
@@ -144,7 +220,7 @@ html {
   
   .icon-facebook {
     font-size: 20px;
-    margin-left: 16%;
+  margin-left: 12%;
   
   }
   
@@ -186,4 +262,73 @@ html {
 
 
     }
+    a{text-decoration: none;
+      color: #E0E724;}
+
+      h1 {
+        text-align: center;
+        font-size: 40px;
+      }
+      
+      h1, h2 {
+        color: #E0E724;
+      }
+      
+      main {
+        margin: 40px 10%;
+        font-weight: bold;
+      }
+      
+      section {
+        background-color: #151967;
+        padding: 20px;
+        border-radius: 10px;
+        margin-bottom: 30px;
   
+      }
+      
+      .instalaciones {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: row;
+      }
+      
+     
+      .clase{
+        flex: 1;
+      }
+   
+     .instalaciones img{
+      width: 40%;
+      height: 240px;
+        border-radius: 10px;
+      align-items: center;
+      padding: 20px;
+      }
+      
+      footer {
+        background-color: #151967;
+        padding: 20px;
+        text-align: center;
+        color: #bfc439;
+        font-family: 'Kalnia';
+        font-weight: bold;
+      }
+      
+      a {
+        color: #bfc439;
+        text-decoration: none;
+      }
+      
+      h2 {
+        font-size: 24px;
+      }
+
+      h3{
+        text-align: center;
+        font-size: 30px;
+        
+      }
